src/test/resources/shell/shellSyntaxErr/if/ifNoelse.wacc
# if missing else clause

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

  if true
  then
    skip
  fi
